# Linux-Programming-Assignment

./: CMakeLists.txt  LICENSE
BONUS/: CMakeLists.txt
BONUS/T3/: CMakeLists.txt
BONUS/T3/client/: main.c
BONUS/T3/server/: connection_handler.c  main.c  message_handler.c
OSA1/: CMakeLists.txt  kysymykset.txt
OSA1/T1/: 5zombies.c  CMakeLists.txt  zombie.c
OSA1/T2/: CMakeLists.txt  main.c
OSA1/T3/: CMakeLists.txt  main.c
OSA1/T4/: CMakeLists.txt  main.c
OSA2/: CMakeLists.txt  kysymykset.txt
OSA2/T1/: CMakeLists.txt  main.c
OSA2/T2/: CMakeLists.txt  main.c
OSA2/T3/: CMakeLists.txt  main.c
OSA2/T4/: CMakeLists.txt  main.c  memcheck.txt
OSA2/T5/: CMakeLists.txt  main.c
OSA2/T6/: CMakeLists.txt  main.c
OSA2/T7/: CMakeLists.txt  main.c
OSA2/T8/: CMakeLists.txt  client.c  server.c
